--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Angel - My Porfolio</title>
+    <title>Simon - My Porfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -33,7 +33,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/simon.jpg);"></span>欧陽百祐test</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/simon.jpg);"></span>欧陽百祐</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -88,10 +88,11 @@
 									<span class="tag">Scenary</span>
 								</div>
 							</a>
+							<body-1>         Accessible by clicking!</body-1>
 						</div>
 
 						<div class="col-md-4 ftco-animate">
-							<a href="https://angelnet850127.wixsite.com/fatdiary" class="photography-entry img d-flex justify-content-start align-items-end" style="background-image: url(images/fatdiary.png);"> 
+							<a href="images/car.png" class="photography-entry img d-flex justify-content-start align-items-end" style="background-image: url(images/car.png);"> 
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Food Science Project</h3>
@@ -101,13 +102,14 @@
 							<body-1>         Accessible by clicking!</body-1>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/antelop_2.JPG" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/antelop_1.JPG);">
+							<a href="images/spider.png" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/spider.png);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Antelope Canyon</h3>
 									<span class="tag">Scenary</span>
 								</div>
 							</a>
+							<body-1>         Accessible by clicking!</body-1>
 						</div>
 						<div class="col-md-4 ftco-animate">
 							<a href="https://www.youtube.com/watch?v=M_V_dAPbLR8&feature=youtu.be" class="photography-entry img  d-flex justify-content-start align-items-end" style="background-image: url(images/impossibleburger.png);">
