--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 	<div id="colorlib-page"> 
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/angel.jpg);"></span> Chen-Yin Tsai</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/angel.jpg);"></span>Simon Ouyang</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<!--<li><a href="about.html">About</a></li>-->
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<!-- <li><a href="services.html">My Services</a></li>-->
-					<li><a href="blog.html">Blog</a></li>
+					<!--<li><a href="blog.html">Blog</a></li>-->
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -77,14 +77,14 @@
 						<div class="author-info text p-3 p-md-5">
 							<div class="desc">
 								<span class="subheading">Hello! I'm</span>
-								<h1 class="big-letter">Angel Tsai</h1>
-								<h1 class="mb-4"><span>Angel Tsai </span></h1> 
-								<h1 class="mb-4">A Food Scientist</h1>
-								<h1 class="mb-4"><span>I Create Joyful Food</span></h1>
+								<h1 class="big-letter">Simon Ouyang</h1>
+								<h1 class="mb-4"><span>Simon Ouyang </span></h1> 
+								<h1 class="mb-4">A Software Engineer!</h1>
+								<h1 class="mb-4"><span></span></h1>
 								<p class="mb-4">I’m a graduate student studying Food Science in UMass Amherst and dedicating myself to creating food product that could bring joy to people’s life! I’m always fueled by passion for understanding the nuances of different cultures and that’s why I love traveling, knowing people from different culture and tasting food from all over the world!</p>
 
-								<h3 class="signature h1">Chenyin Tsai</h3>
-								<a href="about.html">Read More</a>
+								<h3 class="signature h1">Simon Ouyang</h3>
+								<a href="about.html"></a>
 								<ul class="ftco-social mt-3">
 		              <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 		              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -141,57 +141,7 @@
 		      </div>
 				</div>
 			</section> -->
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
-	      <div class="container px-md-5">
-	        <div class="row mb-5">
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4 ml-md-4">
-	              <h2 class="ftco-heading-2">Recent Work</h2>
-	              <ul class="list-unstyled photo">
-	                <li><a href="images/SRA_poster.jpg" class="img" style="background-image: url(images/fig5.png);"></a></li>
-	                <li><a href="https://angelnet850127.wixsite.com/fatdiary" class="img" style="background-image: url(images/fatdiarycopy.png);"></a></li>
-	                <li><a href="images/bbq2w_w.png" class="img" style="background-image: url(images/bbq1copy.png);"></a></li>
-	                <li><a href="vibubs.JPG" class="img" style="background-image: url(images/vibubs.JPG);"></a></li>
-	                <li><a href="images/greencollar.PNG" class="img" style="background-image: url(images/Greencopy.jpeg);"></a></li>
-	                <li><a href="images/cultureH.png" class="img" style="background-image: url(images/cultureH.png);"></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	             <div class="ftco-footer-widget mb-4">
-	              <h2 class="ftco-heading-2">Blog</h2>
-	              <ul class="list-unstyled categories">
-	              	<li><a href="single.html">Plant-Based Egg Alternatives<!--<span>(105)</span>--></a></li>
-	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <!--<span>(212)</span>--></a></li>
-	                <li><a href="single-2.html">Artificial Intelligence from Farm to Table <!--<span>(150)</span>--></a></li>
-	                <!--<li><a href="#">August 2018 <span>(100)</span></a></li>
-	                <li><a href="#">July 2018 <span>(200)</span></a></li>-->
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4">
-	            	<h2 class="ftco-heading-2">Have a Question?</h2>
-	            	<div class="block-23 mb-3">
-		              <ul>
-		                <!--<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> -->
-		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">angelnet850127@gmail.com</span></a></li> 
-		              </ul>
-		            </div>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="row">
-	          <div class="col-md-12">
-
-	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-	          </div>
-	        </div>
-	      </div>
-	    </footer>
+	
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
