--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/angel.jpg);"></span> Chen-Yin Tsai</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/angel.jpg);"></span> Simon Ouyang</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<!--<li><a href="about.html">About</a></li>-->
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<!--<li><a href="services.html">My Services</a></li>-->
-					<li><a href="blog.html">Blog</a></li>
+					<!--<li><a href="blog.html">Blog</a></li>-->
 					<li class="colorlib-active"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -124,7 +124,7 @@
 	        </div>
 	      </div>
 	    </section>
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
+	 <!--   <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
 	          <div class="col-md">
@@ -144,11 +144,11 @@
 	             <div class="ftco-footer-widget mb-4">
 	              <h2 class="ftco-heading-2">Blog</h2>
 	              <ul class="list-unstyled categories">
-	              	<li><a href="single.html">Plant-Based Egg Alternatives<!--<span>(105)</span>--></a></li>
-	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <!--<span>(212)</span>--></a></li>
-	                 <li><a href="single-2.html">Artificial Intelligence from Farm to Table <!--<span>(150)</span>--></a></li>
-	                <!--<li><a href="#">August 2018 <span>(100)</span></a></li>
-	                <li><a href="#">July 2018 <span>(200)</span></a></li>-->
+	              	<li><a href="single.html">Plant-Based Egg Alternatives <span>(105)</span></a></li>
+	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <span>(212)</span></a></li>
+	                 <li><a href="single-2.html">Artificial Intelligence from Farm to Table <span>(150)</span></a></li>
+	                <li><a href="#">August 2018 <span>(100)</span></a></li>
+	                <li><a href="#">July 2018 <span>(200)</span></a></li>
 	              </ul>
 	            </div>
 	          </div>
@@ -157,8 +157,8 @@
 	            	<h2 class="ftco-heading-2">Have a Question?</h2>
 	            	<div class="block-23 mb-3">
 		              <ul>
-		                <!--<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> -->
+		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> 
 		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">angelnet850127@gmail.com</span></a></li> 
 		              </ul>
 		            </div>
@@ -168,13 +168,13 @@
 	        <div class="row">
 	          <div class="col-md-12">
 
-	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+	            <p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
 	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+	   Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>
 	          </div>
 	        </div>
 	      </div>
-	    </footer>
+	    </footer> -->
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
