--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Angel - My Porfolio</title>
+    <title>Simon - My Porfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -33,7 +33,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/angel.jpg);"></span> Simon Ouyang</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(images/simon.jpg);"></span> Simon Ouyang</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -87,14 +87,14 @@
 	          </div>-->
 	          <div class="col-md-3 d-flex">
 	          	<div class="info bg-light p-4">
-		            <p><span>Email</span> <a href="#">angelnet850127@gmail.com</a></p>
+		            <p><span>Email</span> <a href="#">simonouyang1997@gmail.com</a></p>
 		          </div>
 	          </div>
-	          <div class="col-md-3_1 d-flex">
+	          <!--<div class="col-md-3_1 d-flex">
 	          	<div class="info bg-light p-4">
 		            <p><span>Website</span> <a href="https://www.linkedin.com/in/chen-yin-tsai/">www.linkedin.com/in/chen-yin-tsai/</a></p>
 		          </div>
-	          </div>
+	          </div>-->
 	        </div>
 	        <div class="row block-9">
 	          <div class="col-md-6 d-flex">
