--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
 								<h1 class="mb-4">A Software Engineer!</h1>
 								<h1 class="mb-4"><span></span></h1>
 								<p class="mb-4">
-									台湾の中興大学大学院の電機工学科卒業の後で、ソフトウェアエンジンニアとして、会社の開発部門でユーザーインターフェース開発を担当しでいます。私にっとてユーザー視点を考えて最適な製品をデザインするのは開発に重要だと思います！ユーザー インターフェイスを開発して 実験を行うのを支援できたことで、達成感を味わいました。</p>
-								<p class="mb-4">
-									ロボットは感情を持たない装置ではなく、人間に幸せをくれるパートナーであると思います。ロボットに対しての好きだという気持ちなので大学院と大学もロボットについてのことを研究していました。今後もロボット開発の目標に向かって努力したいです！</p>
-
+									台湾の中興大学大学院の電機工学科卒業の後で、ソフトウェアエンジンニアとして、会社の開発部門でユーザーインターフェース開発を担当しでいます。私にっとてユーザー視点を考えて最適な製品をデザインするのは開発に重要だと思います！ユーザー インターフェイスを開発して 実験を行うのを支援できたことで、達成感を味わいました。今後もユーザーインターフェース開発の目標に向かって努力したいです！</p>
+								
 								<h3 class="signature h1">Simon Ouyang</h3>
 								<a href="about.html"></a>
 								<ul class="ftco-social mt-3">
