--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 					<div class="row">
 						
 						<div class="col-md-4 ftco-animate">
-							<a href="images/SRA_poster.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/SRA_poster.jpg);">
+							<a href="images/facial expression.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/SRA_poster.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>SRA Poster</h3>
