--- a/portfolio.html
+++ b/portfolio.html
@@ -71,21 +71,21 @@
 					<div class="row">
 						
 						<div class="col-md-4 ftco-animate">
-							<a href="images/facial expression.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/SRA_poster.jpg);">
+							<a href="images/facial expression.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/ballbot.png);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
-									<h3>SRA Poster</h3>
-									<span class="tag">Science Poster</span>
+									<h3>玉乗りロボットーシミュレーション</h3>
+									<span class="tag">ロボット研究</span>
 								</div>
 							</a>
 						</div>
 
 						<div class="col-md-4 ftco-animate">
-							<a href="images/Umass_2.JPG" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/Umass_2.JPG);">
+							<a href="images/Umass_2.JPG" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/real.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
-									<h3>University of Massachusetts Amherst</h3>
-									<span class="tag">Scenary</span>
+									<h3>玉乗りロボットー実地試験</h3>
+									<span class="tag">ロボット研究</span>
 								</div>
 							</a>
 							<body-1>         Accessible by clicking!</body-1>
