--- a/portfolio.html
+++ b/portfolio.html
@@ -71,24 +71,25 @@
 					<div class="row">
 						
 						<div class="col-md-4 ftco-animate">
-							<a href="images/facial expression.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/ballbot.png);">
+							<a href="images/simulation.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/ballbot.png);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>玉乗りロボットーシミュレーション</h3>
 									<span class="tag">ロボット研究</span>
 								</div>
 							</a>
+							<body-1>写真をクリックしてください！</body-1>
 						</div>
 
 						<div class="col-md-4 ftco-animate">
-							<a href="images/Umass_2.JPG" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/real.jpg);">
+							<a href="images/実地試験.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/real.png);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>玉乗りロボットー実地試験</h3>
 									<span class="tag">ロボット研究</span>
 								</div>
 							</a>
-							<body-1>         Accessible by clicking!</body-1>
+							<body-1>写真をクリックしてください！</body-1>
 						</div>
 
 						<div class="col-md-4 ftco-animate">
@@ -96,20 +97,20 @@
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Food Science Project</h3>
-									<span class="tag">Blog</span>
+									<span class="tag">Project</span>
 								</div>
 							</a>
-							<body-1>         Accessible by clicking!</body-1>
+							<body-1>写真をクリックしてください！</body-1>
 						</div>
 						<div class="col-md-4 ftco-animate">
 							<a href="images/spider.png" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/spider.png);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Antelope Canyon</h3>
-									<span class="tag">Scenary</span>
+									<span class="tag">Project</span>
 								</div>
 							</a>
-							<body-1>         Accessible by clicking!</body-1>
+							<body-1>写真をクリックしてください！</body-1>
 						</div>
 						<div class="col-md-4 ftco-animate">
 							<a href="https://www.youtube.com/watch?v=M_V_dAPbLR8&feature=youtu.be" class="photography-entry img  d-flex justify-content-start align-items-end" style="background-image: url(images/impossibleburger.png);">
