--- a/contact.html
+++ b/contact.html
@@ -124,10 +124,10 @@
 	        </div>
 	      </div>
 	    </section>
-	 <!--   <footer class="ftco-footer ftco-bg-dark ftco-section">
+	    <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
-	          <div class="col-md">
+	         <!-- <div class="col-md">
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
 	              <h2 class="ftco-heading-2">Recent Work</h2>
 	              <ul class="list-unstyled photo">
@@ -164,7 +164,7 @@
 		            </div>
 	            </div>
 	          </div>
-	        </div>
+	        </div>-->
 	        <div class="row">
 	          <div class="col-md-12">
 
