--- a/portfolio.html
+++ b/portfolio.html
@@ -143,6 +143,60 @@
 	  
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
+ <footer class="ftco-footer ftco-bg-dark ftco-section">
+	      <div class="container px-md-5">
+	        <div class="row mb-5">
+	         <!-- <div class="col-md">
+	            <div class="ftco-footer-widget mb-4 ml-md-4">
+	              <h2 class="ftco-heading-2">Recent Work</h2>
+	              <ul class="list-unstyled photo">
+	                <li><a href="images/SRA_poster.jpg" class="img" style="background-image: url(images/fig5.png);"></a></li>
+	                <li><a href="https://angelnet850127.wixsite.com/fatdiary" class="img" style="background-image: url(images/fatdiarycopy.png);"></a></li>
+	                <li><a href="images/bbq2w_w.png" class="img" style="background-image: url(images/bbq1copy.png);"></a></li>
+	                <li><a href="vibubs.JPG" class="img" style="background-image: url(images/vibubs.JPG);"></a></li>
+	                <li><a href="images/greencollar.PNG" class="img" style="background-image: url(images/Greencopy.jpeg);"></a></li>
+	                <li><a href="images/cultureH.png" class="img" style="background-image: url(images/cultureH.png);"></a></li>
+	              </ul>
+	            </div>
+	          </div>
+	          <div class="col-md">
+	             <div class="ftco-footer-widget mb-4">
+	              <h2 class="ftco-heading-2">Blog</h2>
+	              <ul class="list-unstyled categories">
+	              	<li><a href="single.html">Plant-Based Egg Alternatives <span>(105)</span></a></li>
+	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <span>(212)</span></a></li>
+	                 <li><a href="single-2.html">Artificial Intelligence from Farm to Table <span>(150)</span></a></li>
+	                <li><a href="#">August 2018 <span>(100)</span></a></li>
+	                <li><a href="#">July 2018 <span>(200)</span></a></li>
+	              </ul>
+	            </div>
+	          </div>
+	          <div class="col-md">
+	            <div class="ftco-footer-widget mb-4">
+	            	<h2 class="ftco-heading-2">Have a Question?</h2>
+	            	<div class="block-23 mb-3">
+		              <ul>
+		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> 
+		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">angelnet850127@gmail.com</span></a></li> 
+		              </ul>
+		            </div>
+	            </div>
+	          </div>
+	        </div>-->
+	        <div class="row">
+	          <div class="col-md-12">
+	          	Copyright ©2023 All rights reserved | This template is made with  by Colorlib
+
+	            <!--<p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+	   <!--Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>-->
+	          </div>
+	        </div>
+	      </div>
+	    </footer> -->
+		</div><!-- END COLORLIB-MAIN -->
+	</div><!-- END COLORLIB-PAGE -->
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
