--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 	
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
+
  <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
@@ -184,18 +185,20 @@
 		              </ul>
 		            </div>
 	            </div>
-	          </div>-->
-	        </div>
+	          </div>
+	        </div>-->
+	        
 	        <div class="row">
 	          <div class="col-md-12">
 
-	            <!--<p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+	          <!--   <p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 	   <!--Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>-->
 	          </div>
 	        </div>
 	      </div>
-	    </footer> -->
+	    </footer> 
+
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
