--- a/index.html
+++ b/index.html
@@ -146,9 +146,13 @@
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
- <footer class="ftco-footer ftco-bg-dark ftco-section">
+	</section>-->
+
+
+	    <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
+
 	         <!-- <div class="col-md">
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
 	              <h2 class="ftco-heading-2">Recent Work</h2>
@@ -162,11 +166,12 @@
 	              </ul>
 	            </div>
 	          </div>
+
 	          <div class="col-md">
 	             <div class="ftco-footer-widget mb-4">
 	              <h2 class="ftco-heading-2">Blog</h2>
 	              <ul class="list-unstyled categories">
-	              	<li><a href="single.html">Plant-Based Egg Alternatives <span>(105)</span></a></li>
+	              	<li><a href="single.html">Plant-Based Egg Alternatives<span>(105)</span></a></li>
 	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <span>(212)</span></a></li>
 	                 <li><a href="single-2.html">Artificial Intelligence from Farm to Table <span>(150)</span></a></li>
 	                <li><a href="#">August 2018 <span>(100)</span></a></li>
@@ -174,6 +179,7 @@
 	              </ul>
 	            </div>
 	          </div>
+
 	          <div class="col-md">
 	            <div class="ftco-footer-widget mb-4">
 	            	<h2 class="ftco-heading-2">Have a Question?</h2>
@@ -185,19 +191,19 @@
 		              </ul>
 		            </div>
 	            </div>-->
+
 	          </div>
 	        </div>
-
 	        <div class="row">
 	          <div class="col-md-12">
-	          <!--   <p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	   <!--Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>-->
+	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	          </div>
 	        </div>
-
 	      </div>
-	    </footer> 
+	    </footer>
 
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
