--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 		        </div>
 		      </div>
 				</div>
-			</section> -->
+			</section> 
 	
-		</div><!-- END COLORLIB-MAIN -->
-	</div><!-- END COLORLIB-PAGE -->
+		</div> END COLORLIB-MAIN 
+	</div>END COLORLIB-PAGE 
 
 	</section>-->
 
@@ -186,7 +186,7 @@
 	            	<div class="block-23 mb-3">
 		              <ul>
 		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> 
+		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> -->
 		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">angelnet850127@gmail.com</span></a></li> 
 		              </ul>
 		            </div>
