--- a/portfolio.html
+++ b/portfolio.html
@@ -129,7 +129,7 @@
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Muzha, Taipei Taiwan</h3>
-									<span class="tag">Scenary</span>
+									<span class="tag">Project</span>
 								</div>
 							</a>
 							<body-3>_______</body-3><body-1>写真をクリックしてください！</body-1>
