--- a/index.html
+++ b/index.html
@@ -148,11 +148,9 @@
 
 	</section>-->
 
-
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
+ <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
-
 	         <!-- <div class="col-md">
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
 	              <h2 class="ftco-heading-2">Recent Work</h2>
@@ -166,12 +164,11 @@
 	              </ul>
 	            </div>
 	          </div>
-
 	          <div class="col-md">
 	             <div class="ftco-footer-widget mb-4">
 	              <h2 class="ftco-heading-2">Blog</h2>
 	              <ul class="list-unstyled categories">
-	              	<li><a href="single.html">Plant-Based Egg Alternatives<span>(105)</span></a></li>
+	              	<li><a href="single.html">Plant-Based Egg Alternatives <span>(105)</span></a></li>
 	              	<li><a href="single-1.html">Relationship between Cutlery and Taste of Food <span>(212)</span></a></li>
 	                 <li><a href="single-2.html">Artificial Intelligence from Farm to Table <span>(150)</span></a></li>
 	                <li><a href="#">August 2018 <span>(100)</span></a></li>
@@ -179,32 +176,29 @@
 	              </ul>
 	            </div>
 	          </div>
-
 	          <div class="col-md">
 	            <div class="ftco-footer-widget mb-4">
 	            	<h2 class="ftco-heading-2">Have a Question?</h2>
 	            	<div class="block-23 mb-3">
 		              <ul>
 		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> -->
+		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li> 
 		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">angelnet850127@gmail.com</span></a></li> 
 		              </ul>
 		            </div>
-	            </div>-->
-
+	            </div>
 	          </div>
-	        </div>
+	        </div>-->
 	        <div class="row">
 	          <div class="col-md-12">
 
-	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+	            <!--<p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+	   <!--Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>-->
 	          </div>
 	        </div>
 	      </div>
-	    </footer>
-
+	    </footer> -->
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
