--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 	          </div>
 	        </div>
 	      </div>
-	    </footer> -->
+	    </footer> 
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
