--- a/portfolio.html
+++ b/portfolio.html
@@ -141,8 +141,7 @@
 					</div>
 				</div>
 			</section>
-		</div><!-- END COLORLIB-MAIN -->
-	</div><!-- END COLORLIB-PAGE -->
+	
 
  <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
@@ -194,7 +193,7 @@
 	          </div>
 	        </div>
 	      </div>
-	    </footer> -->
+	    </footer> 
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
