--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,40 @@
 			<section class="ftco-section-3">
 				<div class="photograhy">
 					<div class="row">
+						
+						<div class="col-md-4 ftco-animate">
+							<a href="images/thermal.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/thermal.jpg);">
+								<div class="overlay"></div>
+								<div class="text ml-4 mb-4">
+									<h3>熱化像装置の制御</h3>
+									<span class="tag">仕事のプロジェクト</span>
+								</div>
+							</a>
+							<body-3>_______</body-3><body-1></body-1>
+						</div>
+						<div class="col-md-4 ftco-animate">
+							<a href="images/thermal.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/thermal.jpg);">
+								<div class="overlay"></div>
+								<div class="text ml-4 mb-4">
+									<h3>熱化像装置の制御</h3>
+									<span class="tag">仕事のプロジェクト</span>
+								</div>
+							</a>
+							<body-3>_______</body-3><body-1></body-1>
+						</div>
+
+						<div class="col-md-4 ftco-animate">
+							<a href="images/thermal.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/thermal.jpg);">
+								<div class="overlay"></div>
+								<div class="text ml-4 mb-4">
+									<h3>熱化像装置の制御</h3>
+									<span class="tag">仕事のプロジェクト</span>
+								</div>
+							</a>
+							<body-3>_______</body-3><body-1></body-1>
+						</div>
+
+
 						<div class="col-md-4 ftco-animate">
 							<a href="images/spider_done.mp4" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/spider.png);">
 								<div class="overlay"></div>
