--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
 							<a href="images/thermal.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/thermal.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
-									<h3>熱化像装置の制御</h3>
+									<h3>熱画像装置の制御</h3>
 									<span class="tag">仕事のプロジェクト</span>
 								</div>
 							</a>
@@ -94,7 +94,7 @@
 							<a href="images/panel.jpg" class="photography-entry img image-popup d-flex justify-content-start align-items-end" style="background-image: url(images/panel.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
-									<h3>パネル画面の制御</h3>
+									<h3>パネル画面の補正実験についてのユーザーインターフェイス開発</h3>
 									<span class="tag">仕事のプロジェクト</span>
 								</div>
 							</a>
